[gd_scene load_steps=11 format=1]

[ext_resource path="res://TestScene.gd" type="Script" id=1]
[ext_resource path="res://TestSceneViewport.gd" type="Script" id=2]
[ext_resource path="res://gball.png" type="Texture" id=3]
[ext_resource path="res://Bullet_manager.tscn" type="PackedScene" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://addons/StatsOverlay/StatsOverlay.gd" type="Script" id=6]
[ext_resource path="res://addons/StatsOverlay/icon.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 30.8459, 30.5192 )

[sub_resource type="Theme" id=2]


[sub_resource type="Theme" id=3]


[node name="Container" type="Container"]

anchor/right = 1
anchor/bottom = 1
hint/tooltip = "asdasd"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 100.0
script/script = ExtResource( 1 )

[node name="Container" type="Container" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 0.0
margin/right = 199.0
margin/bottom = -100.0

[node name="Viewport" type="Viewport" parent="Container"]

rect = Rect2( 0, 0, 824, 600 )
own_world = false
world = null
transparent_bg = false
render_target/enabled = false
render_target/v_flip = false
render_target/clear_on_new_frame = true
render_target/filter = false
render_target/gen_mipmaps = false
render_target/update_mode = 2
audio_listener/enable_2d = false
audio_listener/enable_3d = false
physics/object_picking = false
gui/disable_input = false
script/script = ExtResource( 2 )
tower_sprite = ExtResource( 3 )
interval = 1000.0
tower_count = 100
bullet_speed = 1.0
running = false

[node name="BulletManager" parent="Container/Viewport" instance=ExtResource( 4 )]

[node name="Area2D" type="Area2D" parent="Container/Viewport"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Sprite" type="Sprite" parent="Container/Viewport/Area2D"]

texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container/Viewport/Area2D"]

shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="PanelContainer" type="PanelContainer" parent="."]

editor/display_folded = true
anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 200.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = -100.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 193.0
margin/bottom = 593.0
alignment = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 186.0
margin/bottom = 20.0
alignment = 0

[node name="btn_start" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 41.0
margin/bottom = 20.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Start"
flat = false

[node name="btn_clear" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 2 )
margin/left = 45.0
margin/top = 0.0
margin/right = 89.0
margin/bottom = 20.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Clear"
flat = false

[node name="OptionButton" type="OptionButton" parent="PanelContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 3 )
margin/left = 0.0
margin/top = 24.0
margin/right = 186.0
margin/bottom = 44.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 48.0
margin/right = 186.0
margin/bottom = 62.0
text = "Interval (ms):"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 66.0
margin/right = 186.0
margin/bottom = 90.0
alignment = 0

[node name="slider_interval" type="HSlider" parent="PanelContainer/VBoxContainer/HBoxContainer2"]

rect/min_size = Vector2( 100, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 4.0
margin/right = 100.0
margin/bottom = 20.0
range/min = 10.0
range/max = 1000.0
range/step = 1.0
range/page = 0.0
range/value = 10.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="txt_interval" type="SpinBox" parent="PanelContainer/VBoxContainer/HBoxContainer2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 104.0
margin/top = 0.0
margin/right = 178.0
margin/bottom = 24.0
range/min = 10.0
range/max = 1000.0
range/step = 1.0
range/page = 0.0
range/value = 1000.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = "ms"

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 94.0
margin/right = 186.0
margin/bottom = 108.0
text = "Towers:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 112.0
margin/right = 186.0
margin/bottom = 136.0
alignment = 0

[node name="slider_tower" type="HSlider" parent="PanelContainer/VBoxContainer/HBoxContainer3"]

rect/min_size = Vector2( 100, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 4.0
margin/right = 100.0
margin/bottom = 20.0
range/min = 1.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="txt_tower" type="SpinBox" parent="PanelContainer/VBoxContainer/HBoxContainer3"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 104.0
margin/top = 0.0
margin/right = 178.0
margin/bottom = 24.0
range/min = 1.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="Label3" type="Label" parent="PanelContainer/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 140.0
margin/right = 186.0
margin/bottom = 154.0
text = "Bullet speed:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 158.0
margin/right = 186.0
margin/bottom = 182.0
alignment = 0

[node name="slider_speed" type="HSlider" parent="PanelContainer/VBoxContainer/HBoxContainer4"]

rect/min_size = Vector2( 100, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 4.0
margin/right = 100.0
margin/bottom = 20.0
range/min = 20.0
range/max = 500.0
range/step = 1.0
range/page = 0.0
range/value = 20.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="txt_speed" type="SpinBox" parent="PanelContainer/VBoxContainer/HBoxContainer4"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 104.0
margin/top = 0.0
margin/right = 178.0
margin/bottom = 24.0
range/min = 100.0
range/max = 500.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="StatsOverlay" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 6 )
__meta__ = { "_editor_icon":ExtResource( 7 ) }
interval = 0.25
running = true
grid_margin = Vector2( 20, 5 )
show_fps = true
show_objects = true
show_nodes = true
show_physic2d_nodes = true
show_physic3d_nodes = false
background_color = Color( 0.13092, 0.143895, 0.203125, 0.784314 )


